Fixed too much scrollbars in navigation (#2309)

--- a/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/toggler-item/toggler-item.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/toggler-item/toggler-item.scss
@@ -345,7 +345,8 @@
             div#{$name}__content {
                 padding-top: 0 !important;
                 overflow-y: auto;
-                max-height: rem(300);
+                max-height: rem(500);
+                overflow-x: clip;
 
                 &::-webkit-scrollbar {
                     width: rem(7);
